--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.15.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.2",
     "multer": "^1.4.4"
